--- a/app/src/main/res/layout/activity_ly_chinese_fairytale.xml
+++ b/app/src/main/res/layout/activity_ly_chinese_fairytale.xml
@@ -28,6 +28,13 @@
             android:textColor="@color/design_default_color_on_primary"
             android:textSize="25sp"
             android:textStyle="bold"/>
+        <View
+            android:id="@+id/share"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="15dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_share"/>
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
