--- a/app/src/main/res/layout/activity_ly_chinese_fairytale.xml
+++ b/app/src/main/res/layout/activity_ly_chinese_fairytale.xml
@@ -27,7 +27,8 @@
             android:text="ELECTRONIC"
             android:textColor="@color/design_default_color_on_primary"
             android:textSize="25sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:ignore="InefficientWeight" />
         <View
             android:id="@+id/share"
             android:layout_width="30dp"
