--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -1,44 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Genre">
-    <LinearLayout
-        android:id="@+id/dashboard"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:orientation="horizontal"
-        android:background="#20A3B6">
-        <View
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="15dp"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_logo"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="15"
-            android:layout_marginStart="15dp"
-            android:layout_gravity="center"
-            android:text="Lily"
-            android:textColor="@color/design_default_color_on_primary"
-            android:textSize="25sp"
-            android:textStyle="bold"/>
-        <Button
-            android:id="@+id/settings"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/ic_settings"/>
-    </LinearLayout>
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".GenreFragment">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/dashboard">
+        android:layout_below="@id/viewPager">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -129,4 +101,5 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
-</RelativeLayout>
+
+</LinearLayout>
